Estructura kiosk index.html

--- a/src/main/webapp/monitor1/index.html
+++ b/src/main/webapp/monitor1/index.html
@@ -10,13 +10,13 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- External CSS files -->
-    <link rel="stylesheet" href="css/animaciones.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/controlVistas.css">
-    <link rel="stylesheet" href="css/tamCharts.css">
+    <link rel="stylesheet" href="../css/animaciones.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/controlVistas.css">
+    <link rel="stylesheet" href="../css/tamCharts.css">
 
     <!-- Incluir la biblioteca ECharts -->
-    <script src="echarts/dist/echarts.js"></script>
+    <script src="../echarts/dist/echarts.js"></script>
 </head>
 
 <body>
@@ -26,13 +26,13 @@
     <!-- Sección de Encabezado -->
     <header class="row contenidoHeader">
         <div class="col-2 imagenHeader logo-img-header-SES">
-            <img src="img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
+            <img src="../img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
         </div>
         <div class="col-8 contenidoHeaderTitulo">
             <h1>Estadísticas de Consumo de Agua y Luz</h1>
         </div>
         <div class="col-2 imagenHeader logo-img-header-Rincon">
-            <img src="img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
+            <img src="../img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
         </div>
     </header>
 
@@ -49,7 +49,7 @@
                     <!-- Título de la sección de energía (luz) -->
                     <div class="col-12 contenidoTituloVistas">
                         <div class="contenidoTituloEnergy">
-                            <img src="img/vectorEnergy.svg" alt="Imagen energía">
+                            <img src="../img/vectorEnergy.svg" alt="Imagen energía">
                             <h2>Energía</h2>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                     <!-- Título de la sección de agua -->
                     <div class="col-12 contenidoTituloVistas">
                         <div class="contenidoTituloAgua">
-                            <img src="img/vectorAgua.svg" alt="Imagen energía">
+                            <img src="../img/vectorAgua.svg" alt="Imagen energía">
                             <h2>Agua</h2>
                         </div>
                     </div>
@@ -136,13 +136,13 @@
 </div>
 
 <!-- Archivos JavaScript -->
-<!--<script src="js/controlVistas.js"></script>-->
+<script src="../js/controlVistas.js"></script>
 
-<!--<script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>-->
-<!--<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>-->
+<script type="module" src="../js/graficas/graficaSemanalEnergy.js"></script>
+<script type="module" src="../js/graficas/graficaSemanalAgua.js"></script>
 
-<script type="module" src="js/graficas/graficaMensualEnergy.js"></script>
-<script type="module" src="js/graficas/graficaMensualAgua.js"></script>
+<script type="module" src="../js/graficas/graficaMensualEnergy.js"></script>
+<script type="module" src="../js/graficas/graficaMensualAgua.js"></script>
 
 <!-- Bootstrap JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
