Añadiendo sección html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,6 +78,8 @@
 
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualEnergy"></div>
+
+                        <div id="graficarRetoEnergy">Hola, Energy</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
                 </div>
@@ -121,6 +123,7 @@
 
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualAgua"></div>
+                        <div id="graficarRetoAgua">Hola, Mundo</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
 
@@ -130,16 +133,16 @@
     </main>
 
     <!-- Sección de Pie de Página -->
-<!--    <footer class="contenidoFooter">-->
-<!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
-<!--    </footer>-->
+    <!--    <footer class="contenidoFooter">-->
+    <!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
+    <!--    </footer>-->
 </div>
 
 <!-- Archivos JavaScript -->
-<!--<script src="js/controlVistas.js"></script>-->
+<script src="js/controlVistas.js"></script>
 
-<!--<script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>-->
-<!--<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>-->
+<script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
+<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
 
 <script type="module" src="js/graficas/graficaMensualEnergy.js"></script>
 <script type="module" src="js/graficas/graficaMensualAgua.js"></script>
