--- a/src/main/webapp/monitor3/index.html
+++ b/src/main/webapp/monitor3/index.html
@@ -29,7 +29,7 @@
             <img src="../img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
         </div>
         <div class="col-8 contenidoHeaderTitulo">
-            <h1>Cambios nuevos</h1>
+            <h1>Estadísticas de Consumo de Agua y Luz</h1>
         </div>
         <div class="col-2 imagenHeader logo-img-header-Rincon">
             <img src="../img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
