--- a/src/main/webapp/version1.html
+++ b/src/main/webapp/version1.html
@@ -5,15 +5,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>JSP Page</title>
 
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <!-- External CSS files -->
     <link rel="stylesheet" href="css/animaciones.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/controlVistas.css">
     <link rel="stylesheet" href="css/tamCharts.css">
 
-    <!-- Include the ECharts file you just downloaded -->
+    <!-- Incluir la biblioteca ECharts -->
     <script src="echarts/dist/echarts.js"></script>
 </head>
 
@@ -21,6 +23,7 @@
 
 <!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
 <div class="container">
+    <!-- Sección de Encabezado -->
     <header class="row contenidoHeader">
         <div class="col-2 imagenHeader logo-img-header-SES">
             <img src="img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
@@ -33,6 +36,7 @@
         </div>
     </header>
 
+    <!-- Sección de Contenido Principal -->
     <main class="container-fluid contenidoMain" id="contenidoMain">
         <div class="row contenidoVistaGeneral">
 
@@ -51,7 +55,7 @@
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
 
-                    <!-- Control de vistas en css/controlVistas.css y en js/controlVistas.js -->
+                    <!-- Contenido del Consumo de Energía -->
                     <div class="col-12 contenidoConsumoEnergy">
                         <!-- Vista del consumo SEMANAL de energía. Inicialmente visible.
                         Cambiará cada x tiempo por la vista del consumo mensual de energía -->
@@ -68,6 +72,7 @@
                         </div>
                     </div>
 
+                    <!-- Gráficas de Consumo de Energía -->
                     <div class="contenidoGraficaConsumoEnergy">
                         <div id="graficaSemanalEnergy"></div>
 
@@ -93,6 +98,7 @@
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
 
+                    <!-- Contenido del Consumo de Agua -->
                     <div class="col-12 contenidoConsumoAgua">
                         <!-- Vista del consumo SEMANAL del agua. Inicialmente visible.
                         Cambiará cada x tiempo por la vista del consumo mensual del agua -->
@@ -109,6 +115,7 @@
                         </div>
                     </div>
 
+                    <!-- Gráficas de Consumo de Agua -->
                     <div class="contenidoGraficaConsumoAgua">
                         <div id="graficaSemanalAgua"></div>
 
@@ -120,25 +127,24 @@
                 </div>
             </section>
         </div>
-
-
     </main>
 
+    <!-- Sección de Pie de Página -->
     <!--    <footer class="contenidoFooter">-->
     <!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
     <!--    </footer>-->
 </div>
 
-<!--<script src="js/controlVistas.js"></script>-->
+<!-- Archivos JavaScript -->
+<script src="js/controlVistas.js"></script>
 
-<script type="module" src="js/graficas/graficaSemanalEnergy(Anterior).js"></script>
-<script type="module" src="js/graficas/graficaSemanalAgua(Anterior).js"></script>
+<script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
+<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
 
-<!--<script src="js/graficas/graficaMensualEnergy.js"></script>-->
-<!--<script src="js/graficas/graficaMensualAgua.js"></script>-->
+<script type="module" src="js/graficas/graficaMensualEnergy.js"></script>
+<script type="module" src="js/graficas/graficaMensualAgua.js"></script>
 
-<script type="module" src="js/api-service.js"></script>
-
+<!-- Bootstrap JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
