Header almost finiquitado

--- a/src/main/webapp/monitor1/index.html
+++ b/src/main/webapp/monitor1/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
+<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>
 <div class="container">
     <!-- Sección de Encabezado -->
     <header class="row contenidoHeader">
@@ -29,7 +29,7 @@
             <img src="../img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
         </div>
         <div class="col-8 contenidoHeaderTitulo">
-            <h1>Cambios nuevos</h1>
+            <h1>Cambios nuevos 14:06 - 14/03/2024</h1>
         </div>
         <div class="col-2 imagenHeader logo-img-header-Rincon">
             <img src="../img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
@@ -133,12 +133,13 @@
     </main>
 
     <!-- Sección de Pie de Página -->
-<!--    <footer class="contenidoFooter">-->
-<!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
-<!--    </footer>-->
+    <!--    <footer class="contenidoFooter">-->
+    <!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
+    <!--    </footer>-->
 </div>
 
 <!-- Archivos JavaScript -->
+<script src="../js/refresh_datos_server/refresh_server.js"></script>
 <script src="../js/controlVistas.js"></script>
 
 <script type="module" src="../js/graficas/graficaSemanalEnergy.js"></script>
