--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,14 +25,14 @@
 <div class="container">
     <!-- Sección de Encabezado -->
     <header class="row contenidoHeader">
-        <div class="col-2 imagenHeader logo-img-header-SES">
-            <img src="img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
+        <div id="contenedorIcono" class="col-2 imagenHeader logo-img-header-SES">
+            <img id="iconSES" src="img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
         </div>
         <div class="col-8 contenidoHeaderTitulo">
             <h1>Estadísticas de Consumo de Agua y Luz</h1>
         </div>
-        <div class="col-2 imagenHeader logo-img-header-Rincon">
-            <img src="img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
+        <div id="contenedorLogos" class="col-2 imagenHeader logo-img-header-Rincon">
+            <img id="iconElRincon" src="img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
         </div>
     </header>
 
@@ -70,6 +70,13 @@
                             <h3>Consumo del MES actual </h3>
                             <span id="cantidadConsumoEnergyMensual">___</span>
                         </div>
+
+                        <!-- Vista del RETO de energía. Inicialmente oculto.
+                        Cambiará cada x tiempo por la vista del consumo semanal de energía -->
+<!--                        <div id="contenidoRetoEnergy">-->
+<!--                            <h3>Consumo del MES actual </h3>-->
+<!--                            <span id="retoEnergy">___</span>-->
+<!--                        </div>-->
                     </div>
 
                     <!-- Gráficas de Consumo de Energía -->
@@ -79,7 +86,7 @@
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualEnergy"></div>
 
-                        <div id="graficarRetoEnergy">Hola, Energy</div>
+<!--                        <div id="graficarRetoEnergy">Hola, Energy</div>-->
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
                 </div>
@@ -115,6 +122,13 @@
                             <h3>Consumo del MES actual</h3>
                             <span id="cantidadConsumoAguaMensual">___</span>
                         </div>
+
+                        <!-- Vista del RETO de agua. Inicialmente oculto.
+                       Cambiará cada x tiempo por la vista del consumo semanal de energía -->
+<!--                        <div id="contenidoRetoAgua">-->
+<!--                            <h3>Consumo del MES actual </h3>-->
+<!--                            <span id="retoAgua">___</span>-->
+<!--                        </div>-->
                     </div>
 
                     <!-- Gráficas de Consumo de Agua -->
@@ -123,7 +137,7 @@
 
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualAgua"></div>
-                        <div id="graficarRetoAgua">Hola, Mundo</div>
+<!--                        <div id="graficarRetoAgua">Hola, Mundo</div>-->
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
 
@@ -139,6 +153,7 @@
 </div>
 
 <!-- Archivos JavaScript -->
+<script src="js/cambioLogo.js"></script>
 <script src="js/controlVistas.js"></script>
 
 <script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
