--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,7 +65,7 @@
                         </div>
 
                         <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
-                        Cambiará cada x tiempo por la vista del consumo semanal de energía -->
+                        Cambiará cada x tiempo por la vista del RETO de energía -->
                         <div id="contenidoConsumoEnergyMensual">
                             <h3>Consumo del MES actual </h3>
                             <span id="cantidadConsumoEnergyMensual">___</span>
@@ -73,10 +73,10 @@
 
                         <!-- Vista del RETO de energía. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal de energía -->
-<!--                        <div id="contenidoRetoEnergy">-->
-<!--                            <h3>Consumo del MES actual </h3>-->
-<!--                            <span id="retoEnergy">___</span>-->
-<!--                        </div>-->
+                        <div id="contenidoRetoEnergy">
+                            <h3>RETO! No sobrepasar</h3>
+                            <span id="retoEnergy">___</span>
+                        </div>
                     </div>
 
                     <!-- Gráficas de Consumo de Energía -->
@@ -86,7 +86,7 @@
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualEnergy"></div>
 
-<!--                        <div id="graficarRetoEnergy">Hola, Energy</div>-->
+                        <div id="graficarRetoEnergy">Hola, Energy</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
                 </div>
@@ -123,12 +123,12 @@
                             <span id="cantidadConsumoAguaMensual">___</span>
                         </div>
 
-                        <!-- Vista del RETO de agua. Inicialmente oculto.
-                       Cambiará cada x tiempo por la vista del consumo semanal de energía -->
-<!--                        <div id="contenidoRetoAgua">-->
-<!--                            <h3>Consumo del MES actual </h3>-->
-<!--                            <span id="retoAgua">___</span>-->
-<!--                        </div>-->
+                        <!-- Vista del RETO de energía. Inicialmente oculto.
+                        Cambiará cada x tiempo por la vista del consumo semanal de energía -->
+                        <div id="contenidoRetoAgua">
+                            <h3>RETO! No sobrepasar</h3>
+                            <span id="retoAgua">___</span>
+                        </div>
                     </div>
 
                     <!-- Gráficas de Consumo de Agua -->
@@ -137,7 +137,7 @@
 
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualAgua"></div>
-<!--                        <div id="graficarRetoAgua">Hola, Mundo</div>-->
+                        <div id="graficarRetoAgua">Hola, Mundo</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
 
@@ -145,7 +145,6 @@
             </section>
         </div>
     </main>
-
     <!-- Sección de Pie de Página -->
     <!--    <footer class="contenidoFooter">-->
     <!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
@@ -153,7 +152,7 @@
 </div>
 
 <!-- Archivos JavaScript -->
-<script src="js/cambioLogo.js"></script>
+<!--<script src="js/cambioLogo.js"></script>-->
 <script src="js/controlVistas.js"></script>
 
 <script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
