--- a/src/main/webapp/version1.html
+++ b/src/main/webapp/version1.html
@@ -59,16 +59,16 @@
                     <div class="col-12 contenidoConsumoEnergy">
                         <!-- Vista del consumo SEMANAL de energía. Inicialmente visible.
                         Cambiará cada x tiempo por la vista del consumo mensual de energía -->
-                        <div id="contenidoConsumoEnergyActual" class="row">
-                            <div class="col-6"><h3>Consumo DIARIO actual</h3></div>
-                            <div class="col-6"><span id="cantidadConsumoEnergyActual">50 kWh</span></div>
+                        <div id="contenidoConsumoEnergyActual">
+                            <h3>Consumo DIARIO actual</h3>
+                            <span id="cantidadConsumoEnergyActual">___</span>
                         </div>
 
                         <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal de energía -->
-                        <div id="contenidoConsumoEnergyMensual" class="row">
-                            <div class="col-6"><h3>Consumo MENSUAL actual </h3></div>
-                            <div class="col-6"><span id="cantidadConsumoEnergyMensual">500 kWh</span></div>
+                        <div id="contenidoConsumoEnergyMensual">
+                            <h3>Consumo del MES actual </h3>
+                            <span id="cantidadConsumoEnergyMensual">___</span>
                         </div>
                     </div>
 
@@ -78,6 +78,8 @@
 
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualEnergy"></div>
+
+                        <div id="graficarRetoEnergy">Hola, Energy</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
                 </div>
@@ -102,16 +104,16 @@
                     <div class="col-12 contenidoConsumoAgua">
                         <!-- Vista del consumo SEMANAL del agua. Inicialmente visible.
                         Cambiará cada x tiempo por la vista del consumo mensual del agua -->
-                        <div id="contenidoConsumoAguaActual" class="row">
-                            <div class="col-6"><h3>Consumo DIARIO actual</h3></div>
-                            <div class="col-6"><span id="cantidadConsumoAguaActual">3.375 L</span></div>
+                        <div id="contenidoConsumoAguaActual">
+                            <h3>Consumo DIARIO actual</h3>
+                            <span id="cantidadConsumoAguaActual">___</span>
                         </div>
 
                         <!-- Vista del consumo MENSUAL del agua. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal del agua -->
-                        <div id="contenidoConsumoAguaMensual" class="row">
-                            <div class="col-6"><h3>Consumo MENSUAL actual</h3></div>
-                            <div class="col-6"><span id="cantidadConsumoAguaMensual">8.375 L</span></div>
+                        <div id="contenidoConsumoAguaMensual">
+                            <h3>Consumo del MES actual</h3>
+                            <span id="cantidadConsumoAguaMensual">___</span>
                         </div>
                     </div>
 
@@ -121,6 +123,7 @@
 
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualAgua"></div>
+                        <div id="graficarRetoAgua">Hola, Mundo</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
 
