inicializadorGraficas.js implementado

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
             <img id="iconSES" src="img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
         </div>
         <div class="col-8 contenidoHeaderTitulo">
-            <h1>Estadísticas de Consumo de Agua y Luz</h1>
+            <h1 id="test">Estadísticas de Consumo de Agua y Luz</h1>
         </div>
         <div id="contenedorLogos" class="col-2 imagenHeader logo-img-header-Rincon">
             <img id="iconElRincon" src="img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
@@ -153,8 +153,10 @@
 </div>
 
 <!-- Archivos JavaScript -->
-<!--<script src="js/cambioLogo.js"></script>-->
+<script src="js/cambioLogo.js"></script>
 <script src="js/controlVistas.js"></script>
+
+<script type="module" src="js/graficas/inicializadorGraficas.js"></script>
 
 <script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
 <script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
