Comienzo gráficas reto

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -86,7 +86,7 @@
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualEnergy"></div>
 
-                        <div id="graficarRetoEnergy">Hola, Energy</div>
+                        <div id="graficaRetoEnergy">Hola, Energy</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
                 </div>
@@ -137,7 +137,7 @@
 
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualAgua"></div>
-                        <div id="graficarRetoAgua">Hola, Mundo</div>
+                        <div id="graficaRetoAgua">Hola, Mundo</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
 
@@ -163,6 +163,9 @@
 
 <script type="module" src="js/graficas/graficaMensualEnergy.js"></script>
 <script type="module" src="js/graficas/graficaMensualAgua.js"></script>
+
+<script type="module" src="js/graficas/graficaRetoEnergy.js"></script>
+<script type="module" src="js/graficas/graficaRetoAgua.js"></script>
 
 <!-- Bootstrap JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
