Añadido fichero reto.css

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,12 +14,13 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/controlVistas.css">
     <link rel="stylesheet" href="css/tamCharts.css">
+    <link rel="stylesheet" href="css/reto.css">
 
     <!-- Incluir la biblioteca ECharts -->
     <script src="echarts/dist/echarts.js"></script>
 </head>
 
-<body>
+<body class="bodyGeneral">
 
 <!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
 <div class="container">
