--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,9 +20,18 @@
     <script src="echarts/dist/echarts.js"></script>
 </head>
 
-<body class="bodyGeneral">
+<body class="bodyGeneral" id="body">
 
 <!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
+<div class="momentoReto" id="momentoReto">
+    <div class="retoContenedorTitulo">
+        <div class="retoTitulo">
+            <span class="retoTextoNaranja">Momento</span>
+            <span class="retoTextoBlanco">RETO</span>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <!-- Sección de Encabezado -->
     <header class="row contenidoHeader">
