--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,14 +23,16 @@
 <body class="bodyGeneral" id="body">
 
 <!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
-<div class="momentoReto" id="momentoReto">
-    <div class="retoContenedorTitulo">
-        <div class="retoTitulo">
-            <span class="retoTextoNaranja">Momento</span>
-            <span class="retoTextoBlanco">RETO</span>
-        </div>
-    </div>
-</div>
+
+<!--Posible implementación futura-->
+<!--<div class="momentoReto" id="momentoReto">-->
+<!--    <div class="retoContenedorTitulo">-->
+<!--        <div class="retoTitulo">-->
+<!--            <span class="retoTextoNaranja">Momento</span>-->
+<!--            <span class="retoTextoBlanco">RETO</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <div class="container">
     <!-- Sección de Encabezado -->
