Preparando alternativa vista reto

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,14 +25,14 @@
 <!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
 
 <!--Posible implementación futura-->
-<!--<div class="momentoReto" id="momentoReto">-->
-<!--    <div class="retoContenedorTitulo">-->
-<!--        <div class="retoTitulo">-->
-<!--            <span class="retoTextoNaranja">Momento</span>-->
-<!--            <span class="retoTextoBlanco">RETO</span>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+<div class="momentoReto" id="momentoReto">
+    <div class="retoContenedorTitulo">
+        <div class="retoTitulo">
+            <span class="retoTextoNaranja">Momento</span>
+            <span class="retoTextoBlanco">RETO</span>
+        </div>
+    </div>
+</div>
 
 <div class="container">
     <!-- Sección de Encabezado -->
@@ -166,7 +166,7 @@
 
 <!-- Archivos JavaScript -->
 <script src="js/cambioLogo.js"></script>
-<script src="js/controlVistas.js"></script>
+<script src="js/controlVistasTempo.js"></script>
 
 <script type="module" src="js/graficas/inicializadorGraficas.js"></script>
 
