Proyecto cambio modo reto

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -166,7 +166,7 @@
 
 <!-- Archivos JavaScript -->
 <script src="js/cambioLogo.js"></script>
-<script src="js/controlVistasTempo.js"></script>
+<script src="js/controlVistas.js"></script>
 
 <script type="module" src="js/graficas/inicializadorGraficas.js"></script>
 
