--- a/src/main/webapp/monitor1/index.html
+++ b/src/main/webapp/monitor1/index.html
@@ -14,25 +14,37 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/controlVistas.css">
     <link rel="stylesheet" href="../css/tamCharts.css">
+    <link rel="stylesheet" href="../css/reto.css">
 
     <!-- Incluir la biblioteca ECharts -->
     <script src="../echarts/dist/echarts.js"></script>
 </head>
 
-<body>
+<body class="bodyGeneral" id="body">
 
-<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>
+<!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
+
+<!--Posible implementación futura-->
+<div class="momentoReto" id="momentoReto">
+    <div class="retoContenedorTitulo">
+        <div class="retoTitulo">
+            <span class="retoTextoNaranja">Momento</span>
+            <span class="retoTextoBlanco">RETO</span>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <!-- Sección de Encabezado -->
     <header class="row contenidoHeader">
-        <div class="col-2 imagenHeader logo-img-header-SES">
-            <img src="../img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
+        <div id="contenedorIcono" class="col-2 imagenHeader logo-img-header-SES">
+            <img id="iconSES" src="../img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
         </div>
         <div class="col-8 contenidoHeaderTitulo">
-            <h1>Cambios nuevos 14:06 - 14/03/2024</h1>
+            <h1 id="test">Estadísticas de Consumo de Agua y Luz</h1>
         </div>
-        <div class="col-2 imagenHeader logo-img-header-Rincon">
-            <img src="../img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
+        <div id="contenedorLogos" class="col-2 imagenHeader logo-img-header-Rincon">
+            <img id="iconElRincon" src="../img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
         </div>
     </header>
 
@@ -65,10 +77,17 @@
                         </div>
 
                         <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
-                        Cambiará cada x tiempo por la vista del consumo semanal de energía -->
+                        Cambiará cada x tiempo por la vista del RETO de energía -->
                         <div id="contenidoConsumoEnergyMensual">
                             <h3>Consumo del MES actual </h3>
                             <span id="cantidadConsumoEnergyMensual">___</span>
+                        </div>
+
+                        <!-- Vista del RETO de energía. Inicialmente oculto.
+                        Cambiará cada x tiempo por la vista del consumo semanal de energía -->
+                        <div id="contenidoRetoEnergy">
+                            <h3>RETO! No sobrepasar</h3>
+                            <span id="retoEnergy">___</span>
                         </div>
                     </div>
 
@@ -79,7 +98,7 @@
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualEnergy"></div>
 
-                        <div id="graficarRetoEnergy">Hola, Energy</div>
+                        <div id="graficaRetoEnergy">Hola, Energy</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
                 </div>
@@ -115,6 +134,13 @@
                             <h3>Consumo del MES actual</h3>
                             <span id="cantidadConsumoAguaMensual">___</span>
                         </div>
+
+                        <!-- Vista del RETO de energía. Inicialmente oculto.
+                        Cambiará cada x tiempo por la vista del consumo semanal de energía -->
+                        <div id="contenidoRetoAgua">
+                            <h3>RETO! No sobrepasar</h3>
+                            <span id="retoAgua">___</span>
+                        </div>
                     </div>
 
                     <!-- Gráficas de Consumo de Agua -->
@@ -123,7 +149,7 @@
 
                         <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualAgua"></div>
-                        <div id="graficarRetoAgua">Hola, Mundo</div>
+                        <div id="graficaRetoAgua">Hola, Mundo</div>
                     </div>
                     <!-- ----------------------------------------------------------------------- -->
 
@@ -139,14 +165,10 @@
 </div>
 
 <!-- Archivos JavaScript -->
-<script src="../js/refresh_datos_server/refresh_server.js"></script>
+<script src="../js/cambioLogoMonitor.js"></script>
 <script src="../js/controlVistas.js"></script>
 
-<script type="module" src="../js/graficas/graficaSemanalEnergy.js"></script>
-<script type="module" src="../js/graficas/graficaSemanalAgua.js"></script>
-
-<script type="module" src="../js/graficas/graficaMensualEnergy.js"></script>
-<script type="module" src="../js/graficas/graficaMensualAgua.js"></script>
+<script type="module" src="../js/graficas/inicializadorGraficas.js"></script>
 
 <!-- Bootstrap JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
