Implementado cambio vista modo reto

--- a/src/main/webapp/monitor1/index.html
+++ b/src/main/webapp/monitor1/index.html
@@ -29,7 +29,7 @@
     <div class="retoContenedorTitulo">
         <div class="retoTitulo">
             <span class="retoTextoNaranja">Momento</span>
-            <span class="retoTextoBlanco">RETO</span>
+            <span class="retoTextoBlanco" id="retoTextoBlanco">RETO</span>
         </div>
     </div>
 </div>
@@ -41,7 +41,8 @@
             <img id="iconSES" src="../img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
         </div>
         <div class="col-8 contenidoHeaderTitulo">
-            <h1 id="test">Estadísticas de Consumo de Agua y Luz</h1>
+            <h1 class="contenidoHeaderTituloGeneral">Estadísticas de Consumo de Agua y Luz</h1>
+            <h1 class="contenidoHeaderTituloReto">Reto del día</h1>
         </div>
         <div id="contenedorLogos" class="col-2 imagenHeader logo-img-header-Rincon">
             <img id="iconElRincon" src="../img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
