Graficas reto implementadas

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,7 +87,7 @@
                         <!-- Vista del RETO de energía. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal de energía -->
                         <div id="contenidoRetoEnergy">
-                            <h3>RETO! No sobrepasar</h3>
+                            <h3>¡RETO! No sobrepasar</h3>
                             <span id="retoEnergy">___</span>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                         <!-- Vista del RETO de energía. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal de energía -->
                         <div id="contenidoRetoAgua">
-                            <h3>RETO! No sobrepasar</h3>
+                            <h3>¡RETO! No sobrepasar</h3>
                             <span id="retoAgua">___</span>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
 
 <!-- Archivos JavaScript -->
 <script src="js/cambioLogo.js"></script>
-<script src="js/controlVistas.js"></script>
+<!--<script src="js/controlVistas.js"></script>-->
 
 <script type="module" src="js/graficas/inicializadorGraficas.js"></script>
 
